half fix for height overflowing on the right menu

--- a/web/routes/Dashboard.scss
+++ b/web/routes/Dashboard.scss
@@ -42,6 +42,12 @@
       }
     }
 
+    @include min-sm-height {
+      .FriendsSection-list {
+        max-height: 101px;
+      }
+    }
+
     @include max-sm {
       margin-top: 32px;
     }
